[gd_scene load_steps=27 format=2]

[ext_resource path="res://prefabs/tileset/tileset_selector.gd" type="Script" id=1]
[ext_resource path="res://scenes/map_editor/grid_background.gd" type="Script" id=2]
[ext_resource path="res://scenes/map_editor/camera.gd" type="Script" id=3]
[ext_resource path="res://scenes/map_editor/tools_panel.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/map_editor/grid_background_square.tscn" type="PackedScene" id=5]
[ext_resource path="res://sprites/oskar/tileset.svg" type="Texture" id=6]
[ext_resource path="res://fonts/arial_24.tres" type="DynamicFont" id=7]
[ext_resource path="res://scenes/map_editor/not_yet_implemented_popup.gd" type="Script" id=8]
[ext_resource path="res://scenes/map_editor/paint_grid.gd" type="Script" id=9]
[ext_resource path="res://prefabs/menu_button/menu_button.tscn" type="PackedScene" id=10]
[ext_resource path="res://prefabs/control_canvas_layer/control_canvas_layer.gd" type="Script" id=11]
[ext_resource path="res://scenes/map_editor/state.gd" type="Script" id=12]
[ext_resource path="res://scenes/map_editor/state/move_camera.gd" type="Script" id=13]
[ext_resource path="res://scenes/map_editor/state/selection_rectangle.gd" type="Script" id=14]
[ext_resource path="res://scenes/map_editor/state/paint.gd" type="Script" id=15]
[ext_resource path="res://scenes/map_editor/state/erase.gd" type="Script" id=16]
[ext_resource path="res://scenes/map_editor/layer_viewer.gd" type="Script" id=17]
[ext_resource path="res://scenes/map_editor/layers_editor.tscn" type="PackedScene" id=18]
[ext_resource path="res://scenes/map_editor/new_popup.gd" type="Script" id=19]
[ext_resource path="res://prefabs/map/map.gd" type="Script" id=20]
[ext_resource path="res://prefabs/tileset/tileset.gd" type="Script" id=21]
[ext_resource path="res://prefabs/tile/tile_node.gd" type="Script" id=22]
[ext_resource path="res://prefabs/rules/rules_new.gd" type="Script" id=23]
[ext_resource path="res://prefabs/slot/slots.gd" type="Script" id=24]
[ext_resource path="res://prefabs/rules/rule_viewer.gd" type="Script" id=25]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="PaintGrid" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 640, 360 )
current = true
script = ExtResource( 3 )

[node name="Background" type="Control" parent="Camera2D"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -20480.0
margin_top = -11521.3
margin_right = 20480.0
margin_bottom = 11518.7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridBackground" type="GridContainer" parent="."]
margin_right = 640.0
margin_bottom = 640.0
mouse_filter = 2
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 10
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
rows = 10

[node name="GridBackgroundSquare1" parent="GridBackground" instance=ExtResource( 5 )]
margin_right = 64.0
margin_bottom = 640.0

[node name="LayerViewer" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CanvasLayer" type="CanvasLayer" parent="UI"]

[node name="Control" type="Control" parent="UI/CanvasLayer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/CanvasLayer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TopToolbar" type="Panel" parent="UI/CanvasLayer/Control/VBoxContainer"]
margin_right = 1280.0
margin_bottom = 34.0
rect_min_size = Vector2( 0, 34 )
size_flags_horizontal = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="UI/CanvasLayer/Control/VBoxContainer/TopToolbar"]
modulate = Color( 1, 1, 1, 0.501961 )
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UI/CanvasLayer/Control/VBoxContainer/TopToolbar"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewButton" type="Button" parent="UI/CanvasLayer/Control/VBoxContainer/TopToolbar/HBoxContainer"]
margin_right = 98.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "New"

[node name="OpenButton" type="Button" parent="UI/CanvasLayer/Control/VBoxContainer/TopToolbar/HBoxContainer"]
margin_left = 102.0
margin_right = 200.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "Open"

[node name="DownloadButton" type="Button" parent="UI/CanvasLayer/Control/VBoxContainer/TopToolbar/HBoxContainer"]
margin_left = 204.0
margin_right = 320.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "Download"

[node name="UndoButton" type="Button" parent="UI/CanvasLayer/Control/VBoxContainer/TopToolbar/HBoxContainer"]
margin_left = 324.0
margin_right = 423.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "Undo"

[node name="RedoButton" type="Button" parent="UI/CanvasLayer/Control/VBoxContainer/TopToolbar/HBoxContainer"]
margin_left = 427.0
margin_right = 525.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "Redo"

[node name="ResizeGridButton" type="Button" parent="UI/CanvasLayer/Control/VBoxContainer/TopToolbar/HBoxContainer"]
margin_left = 529.0
margin_right = 665.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "Resize Grid"

[node name="SelectButton" type="Button" parent="UI/CanvasLayer/Control/VBoxContainer/TopToolbar/HBoxContainer"]
margin_left = 669.0
margin_right = 768.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "Select"

[node name="DrawButton" type="Button" parent="UI/CanvasLayer/Control/VBoxContainer/TopToolbar/HBoxContainer"]
margin_left = 772.0
margin_right = 870.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "Draw"

[node name="PanButton" type="Button" parent="UI/CanvasLayer/Control/VBoxContainer/TopToolbar/HBoxContainer"]
margin_left = 874.0
margin_right = 972.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "Pan"

[node name="ZoomButton" type="Button" parent="UI/CanvasLayer/Control/VBoxContainer/TopToolbar/HBoxContainer"]
margin_left = 976.0
margin_right = 1075.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "Zoom"

[node name="SettingsButton" type="Button" parent="UI/CanvasLayer/Control/VBoxContainer/TopToolbar/HBoxContainer"]
margin_left = 1079.0
margin_right = 1177.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )
text = "Settings"

[node name="MenuButton" parent="UI/CanvasLayer/Control/VBoxContainer/TopToolbar/HBoxContainer" instance=ExtResource( 10 )]
margin_left = 1181.0
margin_right = 1280.0
margin_bottom = 34.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = ExtResource( 7 )

[node name="ContentUI" type="HBoxContainer" parent="UI/CanvasLayer/Control/VBoxContainer"]
margin_top = 38.0
margin_right = 1280.0
margin_bottom = 720.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ToolsPanel" parent="UI/CanvasLayer/Control/VBoxContainer/ContentUI" instance=ExtResource( 4 )]
margin_bottom = 682.0

[node name="VBoxContainer" type="VBoxContainer" parent="UI/CanvasLayer/Control/VBoxContainer/ContentUI"]
margin_left = 104.0
margin_right = 1020.0
margin_bottom = 682.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ContentControl" type="Control" parent="UI/CanvasLayer/Control/VBoxContainer/ContentUI/VBoxContainer"]
margin_right = 916.0
margin_bottom = 650.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="ToolName" type="Label" parent="UI/CanvasLayer/Control/VBoxContainer/ContentUI/VBoxContainer"]
margin_top = 654.0
margin_right = 536.0
margin_bottom = 682.0
rect_min_size = Vector2( 536, 0 )
size_flags_horizontal = 0
custom_fonts/font = ExtResource( 7 )
text = "Tool Name"
align = 1

[node name="LayersPanel" type="Panel" parent="UI/CanvasLayer/Control/VBoxContainer/ContentUI"]
margin_left = 1024.0
margin_right = 1280.0
margin_bottom = 682.0
rect_min_size = Vector2( 256, 0 )
size_flags_vertical = 3

[node name="LayersEditor" parent="UI/CanvasLayer/Control/VBoxContainer/ContentUI/LayersPanel" instance=ExtResource( 18 )]
margin_bottom = -264.0

[node name="Tileset" type="GridContainer" parent="UI/CanvasLayer/Control/VBoxContainer/ContentUI/LayersPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 476.0
custom_constants/vseparation = 1
custom_constants/hseparation = 1
columns = 4
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NotYetImplementedPopup" type="PopupPanel" parent="UI/CanvasLayer/Control"]
self_modulate = Color( 1, 1, 1, 0.105882 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelBackground" type="Panel" parent="UI/CanvasLayer/Control/NotYetImplementedPopup"]
self_modulate = Color( 1, 1, 1, 0.129412 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="UI/CanvasLayer/Control/NotYetImplementedPopup/PanelBackground"]
anchor_left = 0.3
anchor_top = 0.3
anchor_right = 0.7
anchor_bottom = 0.7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/CanvasLayer/Control/NotYetImplementedPopup/PanelBackground/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_fonts/font = ExtResource( 7 )
text = "Not implemented yet..."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="UI/CanvasLayer/Control/NotYetImplementedPopup/PanelBackground/Panel"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -87.0
margin_top = 40.0
margin_right = 87.0
margin_bottom = 74.0
custom_fonts/font = ExtResource( 7 )
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NewPopupWindow" type="PopupPanel" parent="UI/CanvasLayer/Control"]
self_modulate = Color( 1, 1, 1, 0.105882 )
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 1 )
script = ExtResource( 19 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelBackground" type="Panel" parent="UI/CanvasLayer/Control/NewPopupWindow"]
self_modulate = Color( 1, 1, 1, 0.129412 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="UI/CanvasLayer/Control/NewPopupWindow/PanelBackground"]
anchor_left = 0.3
anchor_top = 0.3
anchor_right = 0.7
anchor_bottom = 0.7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="UI/CanvasLayer/Control/NewPopupWindow/PanelBackground/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 60.0
margin_right = -20.0
margin_bottom = -20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/CanvasLayer/Control/NewPopupWindow/PanelBackground/Panel/MarginContainer"]
margin_right = 472.0
margin_bottom = 208.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 30
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartCompletelyOver" type="Button" parent="UI/CanvasLayer/Control/NewPopupWindow/PanelBackground/Panel/MarginContainer/VBoxContainer"]
margin_top = 55.0
margin_right = 472.0
margin_bottom = 89.0
custom_fonts/font = ExtResource( 7 )
text = "Start completely over"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartOverSameTiles" type="Button" parent="UI/CanvasLayer/Control/NewPopupWindow/PanelBackground/Panel/MarginContainer/VBoxContainer"]
margin_top = 119.0
margin_right = 472.0
margin_bottom = 153.0
custom_fonts/font = ExtResource( 7 )
text = "Start over using same tileset"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cancel" type="Button" parent="UI/CanvasLayer/Control/NewPopupWindow/PanelBackground/Panel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -50.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 7 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="UI/CanvasLayer/Control/NewPopupWindow/PanelBackground/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -219.0
custom_fonts/font = ExtResource( 7 )
text = "New"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomPanel" type="Panel" parent="UI/CanvasLayer/Control"]
self_modulate = Color( 1, 1, 1, 0.501961 )
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.8
anchor_bottom = 1.0
margin_top = -115.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="UI/CanvasLayer/Control/BottomPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = -10.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 40
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="UI/CanvasLayer/Control/BottomPanel/HBoxContainer"]
margin_right = 152.0
margin_bottom = 95.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Map" type="GridContainer" parent="UI/CanvasLayer/Control/BottomPanel/HBoxContainer/VBoxContainer"]
margin_right = 152.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 20 )

[node name="Label" type="Label" parent="UI/CanvasLayer/Control/BottomPanel/HBoxContainer/VBoxContainer"]
margin_top = 81.0
margin_right = 152.0
margin_bottom = 95.0
text = "Your Map"
align = 1
valign = 1

[node name="VBoxContainer2" type="VBoxContainer" parent="UI/CanvasLayer/Control/BottomPanel/HBoxContainer"]
margin_left = 192.0
margin_right = 344.0
margin_bottom = 95.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Map" type="GridContainer" parent="UI/CanvasLayer/Control/BottomPanel/HBoxContainer/VBoxContainer2"]
margin_right = 152.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 20 )

[node name="Label" type="Label" parent="UI/CanvasLayer/Control/BottomPanel/HBoxContainer/VBoxContainer2"]
margin_top = 81.0
margin_right = 152.0
margin_bottom = 95.0
text = "CCC #1"
align = 1
valign = 1

[node name="VBoxContainer3" type="VBoxContainer" parent="UI/CanvasLayer/Control/BottomPanel/HBoxContainer"]
visible = false
margin_left = 256.0
margin_right = 344.0
margin_bottom = 95.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="UI/CanvasLayer/Control/BottomPanel/HBoxContainer/VBoxContainer3"]
margin_right = 88.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/CanvasLayer/Control/BottomPanel/HBoxContainer/VBoxContainer3"]
margin_top = 81.0
margin_right = 88.0
margin_bottom = 95.0
text = "CCC #2"
align = 1
valign = 1

[node name="VBoxContainer4" type="VBoxContainer" parent="UI/CanvasLayer/Control/BottomPanel/HBoxContainer"]
visible = false
margin_left = 289.0
margin_right = 344.0
margin_bottom = 95.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="UI/CanvasLayer/Control/BottomPanel/HBoxContainer/VBoxContainer4"]
margin_right = 55.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 6 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/CanvasLayer/Control/BottomPanel/HBoxContainer/VBoxContainer4"]
margin_top = 81.0
margin_right = 55.0
margin_bottom = 95.0
text = "CCC #3"
align = 1
valign = 1

[node name="EmptyTilesetWarning" type="Label" parent="UI/CanvasLayer/Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -268.0
margin_top = -157.0
margin_right = 268.0
margin_bottom = 157.0
custom_fonts/font = ExtResource( 7 )
text = "Please add Tiles to your Tileset
before you edit the map"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TilesetButton" type="Button" parent="UI/CanvasLayer/Control/EmptyTilesetWarning"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -75.5
margin_top = 39.0
margin_right = 75.5
margin_bottom = 73.0
custom_fonts/font = ExtResource( 7 )
text = "Tileset Editor"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftClickState" type="Node" parent="."]
script = ExtResource( 12 )

[node name="SelectionRectangle" type="Node" parent="LeftClickState"]
script = ExtResource( 14 )

[node name="MoveCamera" type="Node" parent="LeftClickState"]
script = ExtResource( 13 )

[node name="PaintGrid" type="Node" parent="LeftClickState"]
script = ExtResource( 15 )

[node name="EraseGrid" type="Node" parent="LeftClickState"]
script = ExtResource( 16 )

[node name="FillGrid" type="Node" parent="LeftClickState"]

[node name="MiddleClickState" type="Node" parent="."]
script = ExtResource( 12 )

[node name="MoveCamera" type="Node" parent="MiddleClickState"]
script = ExtResource( 13 )

[node name="RightClickState" type="Node" parent="."]
script = ExtResource( 12 )

[node name="Unselect" type="Node" parent="RightClickState"]
script = ExtResource( 14 )

[node name="ZoomCamera" type="Node" parent="RightClickState"]

[node name="EraseGrid" type="Node" parent="RightClickState"]
script = ExtResource( 16 )

[node name="FillEraseGrid" type="Node" parent="RightClickState"]

[node name="Tileset" type="GridContainer" parent="."]
visible = false
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 21 )

[node name="Rules" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 23 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RuleViewer" type="GridContainer" parent="Rules"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 2
custom_constants/hseparation = 2
columns = 3
script = ExtResource( 25 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Empty1" type="Control" parent="Rules/RuleViewer"]
margin_right = 425.0
margin_bottom = 238.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Top" type="GridContainer" parent="Rules/RuleViewer"]
margin_left = 427.0
margin_right = 852.0
margin_bottom = 238.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 1
custom_constants/hseparation = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Empty2" type="Control" parent="Rules/RuleViewer"]
margin_left = 854.0
margin_right = 1279.0
margin_bottom = 238.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Left" type="GridContainer" parent="Rules/RuleViewer"]
margin_top = 240.0
margin_right = 425.0
margin_bottom = 478.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 1
custom_constants/hseparation = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="TextureRect" parent="Rules/RuleViewer"]
margin_left = 427.0
margin_top = 240.0
margin_right = 852.0
margin_bottom = 478.0
size_flags_horizontal = 3
size_flags_vertical = 3
expand = true
script = ExtResource( 22 )

[node name="Right" type="GridContainer" parent="Rules/RuleViewer"]
margin_left = 854.0
margin_top = 240.0
margin_right = 1279.0
margin_bottom = 478.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 1
custom_constants/hseparation = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Empty3" type="Control" parent="Rules/RuleViewer"]
margin_top = 480.0
margin_right = 425.0
margin_bottom = 718.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Bottom" type="GridContainer" parent="Rules/RuleViewer"]
margin_left = 427.0
margin_top = 480.0
margin_right = 852.0
margin_bottom = 718.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 1
custom_constants/hseparation = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Empty4" type="Control" parent="Rules/RuleViewer"]
margin_left = 854.0
margin_top = 480.0
margin_right = 1279.0
margin_bottom = 718.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Map" type="GridContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 20 )

[node name="Slots" type="GridContainer" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 24 )
__meta__ = {
"_edit_use_anchors_": false
}
